finished the discussion section

--- a/Rohit_Master_Thesis/1.Introduction.tex
+++ b/Rohit_Master_Thesis/1.Introduction.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\chapter{Introduction}
 \label{sec:introduction}
 
 Intro will come here
@@ -10,14 +10,14 @@ Intro will come here
     \label{fig:solution pipeline}
 \end{figure}
 
-\subsection{Current Solution at Siemens}
+\section{Current Solution at Siemens}
 \label{subsec:current solution at siemens}
 
 Before presenting the problem statement, first we give an overview of current supervised solution which is implemented in Siemens AG.
 
-\subsection{Thesis Objective}
+\section{Thesis Objective}
 
 Write thesis objective here
 
-\subsection{Thesis Outline}
+\section{Thesis Outline}
 This thesis comprises of three main chapters: Theoretical Background, Methodology, and Results \& Discussion.-
