--- a/Rohit_Master_Thesis/0.Abstract.tex
+++ b/Rohit_Master_Thesis/0.Abstract.tex
@@ -1,5 +1,12 @@
-\begin{abstract}
-\end{abstract}
+%\begin{abstract}
+%\end{abstract}
+
+\begin{center}
+\bfseries
+% Abstract in English
+{\selectlanguage{english}Abstract}
+\normalfont
+\end{center}
 \sloppy
 In the manufacturing of printed circuit boards (PCBs), inspection of the solder joint ensures the quality and reliability of the product. Traditionally it is done by manual examination or by training a supervised machine learning model where an expert is used to label the dataset manually. This dependency on labeled data forms a bottleneck in efficiency and hence scaling in production. This means that with the increasing complexity of PCB designs and pressure to shorten production cycles, innovative inspection methods need to be developed for the detection of solder-joint defects without using an extensive prelabeled dataset.
 Our research addresses this challenge by using unsupervised learning techniques for solder joint defect detection. We have leveraged the Anomalib library, a comprehensive collection of a wide range of anomaly detection algorithms for the implementation and evaluation of multiple models like PatchCore and DFM, among others. Our approach involves training or extracting features using these models from an unlabeled image dataset of solder joints. The models then label the solder joints as normal or abnormal, along with a corresponding prediction score for each image. This therefore removes the need to have a manually labeled training dataset and can turn out to be more scalable and adaptable for inspection requirements on PCBs. The PatchCore model provided very promising results, showing an accuracy of 91.25\%.
