--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside,reqno,a4paper,twoside]{article}
+\documentclass[12pt,oneside,reqno,a4paper,twoside]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath,amsthm}     % ams stuff should be before font loading
 \usepackage{lmodern}
